--- a/README.org
+++ b/README.org
@@ -1,3 +1,5 @@
 * My Emacs Config
   I mainly use Emacs to take notes. As an Spanish major student with an US layout keyboard, it is hard to take notes in Spanish. This config allows me to enter characters with accent and other Spanish characters (applaud to @casouri).
+  [[./screenshots/type.gif]]
   The config also allows me to look up word under the point in RAE dictionary.
+  [[./screenshots/rae.png]]
